2011-03-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
        * pandoradb.oracle.sql
        pandoradb.data.oracle.sql: First version of pandora's DB schema and data for 
	Oracle DBMS.

2011-03-17  Raul Mateos <raulofpandora@gmail.com>

	* extensions/dbmanager.php, extensions/pandora_logs.php, general/*.php,
	index.php, ajax.php, operation/search_*.php, operation/menu.php,
	operation/extensions.php, godmode/menu.php, godmode/extensions.php,
	admin_access_logs.php: Cleaned code and updated page disclaimers.	

2011-03-17  Raul Mateos <raulofpandora@gmail.com>

	* operation/menu.php, godmode/menu.php, godmode/setup/setup.php,
	extensions/pandora_logs.php, extensions/dbmanager.php:
	Cleaned code and updated year.

2011-03-17  Sergio Martin <sergio.martin@artica.es>

	* operation/integria_incidents
	operation/integria_incidents/incident.incident.php
	operation/integria_incidents/incident.php
	operation/integria_incidents/incident.files.php
	operation/integria_incidents/incident.tracking.php
	operation/integria_incidents/incident_detail.php
	operation/integria_incidents/incident.workunits.php
	operation/integria_incidents/incident.download_file.php
	operation/integria_incidents/incident.list.php
	operation/integria_incidents/incident_statistics.php: Added 
	missed files from the last commit

2011-03-17  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	include/functions_config.php
	include/functions_incidents.php
	operation/menu.php
	operation/integria_incidents
	operation/integria_incidents/incident.incident.php
	operation/integria_incidents/incident.php
	operation/integria_incidents/incident.files.php
	operation/integria_incidents/incident.tracking.php
	operation/integria_incidents/incident_detail.php
	operation/integria_incidents/incident.workunits.php
	operation/integria_incidents/incident.download_file.php
	operation/integria_incidents/incident_statistics.php
	operation/integria_incidents/incident.list.php